--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
-    "jest": "^27.2.5"
+    "jest": "^27.2.5",
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "test": "jest ./*.test.js",
+    "coverage": "jest --coverage ./*.test.js",
+    "watch": "jest --watch ./*.test.js"
   },
   "repository": {
     "type": "git",
