--- a/package.json
+++ b/package.json
@@ -8,14 +8,30 @@
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-plugin-import": "^2.25.2",
     "jest": "^27.2.5",
+    "prettier": "1.19.1",
+    "prettier-eslint": "^10.1.0",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "test": "jest ./*.test.js",
-    "coverage": "jest --coverage ./*.test.js",
-    "watch": "jest --watch ./*.test.js"
+    "dont-use-js-test": "jest ./*.test.js",
+    "dont-use-js-coverage": "jest --coverage ./*.test.js",
+    "dont-use-js-jest-watch": "jest --watch ./*.test.js",
+    
+    "build": "tsc",
+    "test": "jest /*.test.ts",
+    "coverage": "jest --coverage /*.test.ts",
+    "jest-watch": "jest --watch /*test.ts",
+    "tsc-watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
