--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "test": "jest /*.test.ts",
     "coverage": "jest --coverage /*.test.ts",
     "jest-watch": "jest --watch /*test.ts",
-    "tsc-watch": "tsc --watch"
+    "tsc-watch": "tsc --watch",
+
+    "coverage-host": "python3 -m http.server -d ./coverage/lcov-report 5000"
   },
   "repository": {
     "type": "git",
